# Echo

./: .env.example  Dockerfile  FRONTEND_COMPLETE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_phase4.sh  test_production.sh
.devcontainer/: devcontainer.json
_archive/: README.md
_archive/notebooks/: cohort_retention_analysis.ipynb  customer_segmentation.ipynb  revenue_forecasting.ipynb
app/: config.py  main.py
app/core/: redshift.py  s3.py
app/middleware/: __init__.py  auth.py  rate_limit.py  telemetry.py
app/models/: __init__.py  data_source.py  feedback.py  schemas.py  usage_metric.py
app/services/: __init__.py  data_autofixer.py  data_validator.py  ingestion.py  schema_detector.py
data/samples/: bad_data_sample.csv  marketing_sample.csv  revenue_sample.csv
data_quality/expectations/: customer_data_suite.json  experiment_data_suite.json  marketing_data_suite.json  revenue_data_suite.json
dbt/: packages.yml  profiles.yml
dbt/tests/: assert_conversions_not_exceed_leads.sql  assert_customer_has_valid_segment.sql  assert_dimension_scd2_integrity.sql  assert_experiments_have_control.sql  assert_mrr_growth_reasonable.sql  assert_transactions_have_valid_dates.sql
docs/: AWS_INTEGRATION.md  INCREMENTAL_LOADING.md
frontend/: README.md
frontend/app/: page.tsx
frontend/components/: ChatInterface.tsx  FileUpload.tsx  MetricsCard.tsx
frontend/types/: index.ts
orchestration/: notifications.py
orchestration/flows/: __init__.py  daily_metrics.py  (+3 more)
planning/: PHASE_1_COMPLETE.md  PHASE_4_COMPLETE.md  WHATS_NEXT.md
(+31 files in other folders)
