[tool.ruff]
extend-exclude = ["notebooks/", "dbt/dbt_packages/", "frontend/node_modules/"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    notebooks
    | dbt/dbt_packages
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
skip = ["notebooks", "dbt/dbt_packages", ".venv", "frontend/node_modules"]
skip_glob = ["**/dbt_packages/*", "**/node_modules/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echo"
version = "0.1.0"
description = "AI Data Scientist for SMB Analytics"
readme = "README.md"
requires-python = ">=3.11"
